// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test mongoose Track model #Track should return using findById: findById query 1`] = `
Object {
  "_id": "2xN54cw14BBwQVCzQS2izH",
}
`;

exports[`test mongoose Track model #addTracks returns the uris and uses BRH: findOneAndUpdate query 1`] = `
Object {
  "_id": "1ambigrainbowhead",
}
`;

exports[`test mongoose Track model #updateTrackPlaycount does not set the playedAt: playedAt data filled in 1`] = `
Object {
  "addedBy": Array [],
  "metrics": Object {
    "plays": 0,
    "votes": 0,
    "votesAverage": 0,
    "votesTotal": 0,
  },
}
`;

exports[`test mongoose Track model #updateTrackPlaycount sets the playedAt: playedAt data filled in 1`] = `
Object {
  "addedBy": Array [
    Object {
      "played": Array [
        Object {
          "at": 1998-02-23T16:26:40.000Z,
        },
      ],
      "votes": Array [],
    },
  ],
  "metrics": Object {
    "plays": 1,
    "votes": 0,
    "votesAverage": 0,
    "votesTotal": 0,
  },
}
`;

exports[`test mongoose Track model #updateTrackVote adds a vote when there is a matching track 1`] = `
Object {
  "addedBy": CoreDocumentArray [
    Object {
      "played": Array [],
      "votes": Array [
        Object {
          "at": 1998-02-23T16:26:40.000Z,
          "user": "user999",
          "vote": 20,
        },
      ],
    },
  ],
  "metrics": Object {
    "plays": 0,
    "votes": 1,
    "votesAverage": 20,
    "votesTotal": 20,
  },
  "uri": "uri123",
}
`;

exports[`test mongoose Track model #updateTrackVote does not vote when there is no matching track 1`] = `
Object {
  "addedBy": CoreDocumentArray [],
  "metrics": Object {
    "plays": 0,
    "votes": 0,
    "votesAverage": 0,
    "votesTotal": 0,
  },
  "uri": "uri123",
}
`;

exports[`test mongoose Track model #updateTrackVote updates a vote when there is a matching track 1`] = `
Object {
  "addedBy": "addedBy",
  "metrics": "metrics",
  "uri": "123",
}
`;
